--- a/node/vue2-template/vue2-template/package.json
+++ b/node/vue2-template/vue2-template/package.json
@@ -13,7 +13,8 @@
     "babel-plugin-transform-es2015-modules-commonjs": "^6.26.2",
     "element-ui": "^2.12.0",
     "vue": "^2.5.2",
-    "vue-router": "^3.0.1"
+    "vue-router": "^3.0.1",
+    "yarn": "^1.19.1"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
