--- a/node/vue2-template/vue2-template/package.json
+++ b/node/vue2-template/vue2-template/package.json
@@ -25,6 +25,7 @@
     "babel-plugin-syntax-jsx": "^6.18.0",
     "babel-plugin-transform-runtime": "^6.22.0",
     "babel-plugin-transform-vue-jsx": "^3.5.0",
+    "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "chalk": "^2.0.1",
@@ -37,6 +38,7 @@
     "mini-css-extract-plugin": "^0.8.0",
     "node-notifier": "^5.1.2",
     "node-sass": "^4.12.0",
+    "normalize.css": "^8.0.1",
     "optimize-css-assets-webpack-plugin": "^3.2.0",
     "ora": "^1.2.0",
     "portfinder": "^1.0.13",
