--- a/node/wechat/package.json
+++ b/node/wechat/package.json
@@ -1,15 +1,12 @@
 {
-  "dependencies": {
+  "devDependencies": {
     "ejs": "^2.7.1",
     "express": "^4.17.1",
-    "koa": "^2.8.1",
-    "mongoose": "^5.7.3",
+    "mongoose": "^5.7.7",
+    "puppeteer": "^2.0.0",
     "request": "^2.88.0",
     "request-promise-native": "^1.0.7",
     "sha1": "^1.1.1",
     "xml2js": "^0.4.22"
-  },
-  "devDependencies": {
-    "puppeteer": "^1.20.0"
   }
 }
